# c3s-eqc-automatic-quality-control

./: .cruft.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: on-push.yml
c3s_eqc_automatic_quality_control/: __init__.py  _grid_cell_area.py  _regrid.py  _spatial_weighted.py  _time_weighted.py  api.py  cim.py  cli.py  dashboard.py  diagnostics.py  download.py  logs.py  plot.py  runner.py  spatial_weighted.py  utils.py
ci/: environment-ci.yml
docs/: conf.py  index.md
notebooks/: 01-Application_Template_ERA5.ipynb  02-Application_Template_Insitu_Gridded.ipynb  Application_Template_ERA5.ipynb  test.ipynb
tests/: conftest.py  integration_20_diagnostics.py  integration_20_runner.py  test_00_version.py  test_10_download.py  test_15_harmoniser.py  test_20_diagnostics.py  test_20_runner.py  test_21_time_diagnostics.py  test_22_spatial_diagnostics.py  test_30_utils.py  test_40_plots.py  test_50_dashboard.py  utils.py
