[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
description = "C3S EQC Automatic Quality Control"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "c3s-eqc-automatic-quality-control"
readme = "README.md"

[project.scripts]
eqc = "c3s_eqc_automatic_quality_control.cli:eqc"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cads_toolbox",
  "cartopy.*",
  "cgul",
  "emohawk.*",
  "fsspec",
  "joblib",
  "plotly.*",
  "shapely",
  "sklearn.*",
  "xesmf",
  "xskillscore"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
# Same as Black.
indent-width = 4
line-length = 88
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D",
  # Pyupgrade
  "UP"
]
target-version = "py310"

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["c3s_eqc_automatic_quality_control"]

[tool.setuptools_scm]
write_to = "c3s_eqc_automatic_quality_control/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
