[metadata]
name = c3s-eqc-automatic-quality-control
license = Apache License 2.0
description = C3S EQC Automatic Quality Control
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:

[options.entry_points]
console_scripts =
    eqc = c3s_eqc_automatic_quality_control.cli:eqc

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = True

[mypy-cads_toolbox.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-yaml.*]
ignore_missing_imports = True
